add include for future ga

--- a/tridents/templates/splash.html
+++ b/tridents/templates/splash.html
@@ -39,7 +39,7 @@
                     <a href="{{ url_for('home') }}" class="button is-outlined is-inverted is-primary is-large">Home</a>
                 </div>
                 <div class="column">
-                    <a href="" class="button is-outlined is-inverted is-primary is-large">Join the Team</a>
+                    <a href="#join-section" class="button is-outlined is-inverted is-primary is-large">Join the Team</a>
                 </div>
                 <div class="column">
                     <a href="{{ url_for('contact') }}" class="button is-outlined is-inverted is-primary is-large">Contact</a>
