--- a/tridents/templates/layout.html
+++ b/tridents/templates/layout.html
@@ -33,7 +33,7 @@
                 </figure>
             </a>
 
-            <a href="" class="is-tab nav-item {{ active('about') }}">About Us</a>
+            <a href="{{ url_for('join') }}" class="is-tab nav-item {{ active('join') }}">Join</a>
         </div>
 
         <div class="nav-right">
