--- a/tridents/templates/layout.html
+++ b/tridents/templates/layout.html
@@ -5,6 +5,8 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    {% include 'includes/_google_analytics.html' %}
+
     <title>{% block title %}{% endblock %} • Tri-County Rugby</title>
 
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.3.2/css/bulma.min.css">
