--- a/tridents/templates/splash.html
+++ b/tridents/templates/splash.html
@@ -5,6 +5,8 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    {% include 'includes/_google_analytics.html' %}
+
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.3.2/css/bulma.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/splash.css') }}">
     
